kubernetes/apps/networking/traefik/homepage/redirect.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: homepage-redirect
  namespace: networking
spec:
  redirectRegex:
    regex: ^https://[^/]+(/.*)?$
    replacement: https://chamburr.com$${1}
