kubernetes/apps/networking/traefik/homepage/cockpit.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cockpit
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cockpit.${DOMAIN}`)
      kind: Rule
      services:
        - kind: Service
          name: cockpit
          namespace: networking
---
apiVersion: v1
kind: Service
metadata:
  name: cockpit
  namespace: neworking
spec:
  externalName: ${GATEWAY_IP}
  type: ExternalName
  ports:
    - port: 9090
