kubernetes/apps/networking/traefik/homepage/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${DOMAIN}`) && Path(`/u/[^\/]+`)
      middlewares:
        - name: strip-prefix
          namespace: networking
      services:
        - kind: Service
          name: zipline
          namespace: utility
    - kind: Rule
      match: Host(`${DOMAIN}`) && Path(`/.well-known/(?:carddav|caldav)`)
      services:
        - kind: Service
          name: mailu-front
          namespace: mail
    - kind: Rule
      match: Host(`${DOMAIN}`)
      middlewares:
        - name: homepage-redirect
          namespace: networking
      services:
        - kind: TraefikService
          name: noop@internal
  tls:
    domains:
      - main: ${DOMAIN}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: catch-all
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${DOMAIN}`) || HostRegexp(`{subhost:.+}.${DOMAIN}`)
      priority: 1
      services:
        - kind: TraefikService
          name: noop@internal
  tls:
    domains:
      - main: "*.${DOMAIN}"
